# BitNet-LLM-Virtual-Coworker-Builder

./: .gitignore  CONTRIBUTING.md  GITHUB_README.md  GITHUB_SETUP.md  LICENSE  PRODUCTION_SETUP.md  README.md  push_to_github.ps1  pyproject.toml  requirements.txt  setup.py  setup_production.ps1  test_production_setup.ps1
.github/DISCUSSION_TEMPLATE/: ideas.yml  q_a.yml  show_and_tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md  feature_request.md  production_issue.md
.github/workflows/: build.yml  ci.yml  tests.yml
backup/: README.md  backup.ps1  setup_backup.ps1
benchmarks/: benchmark_team.py  benchmark_virtual_coworker.py
config/: config.yaml  production.yaml  windows-production.yaml
deployment/: deploy.ps1  deploy.sh
docs/: api.md  ci_cd_guide.md  community_engagement_guide.md  custom_tools.md  getting_started.md  issue_reporting_guide.md  production_testing_guide.md  python_api.md  tauri_ui_guide.md  team_configurations.md
examples/: api_client.py  api_server.py  collaboration_modes.py  custom_api_server.py  custom_memory.py  custom_model.py  custom_tool.py  memory_example.py  simple_team.py  simple_virtual_coworker.py  single_virtual_coworker.py  specialized_coworker.py  team_collaboration.py  team_example.py
monitoring/: monitor.ps1  setup_monitoring.ps1  web_dashboard.py
src/bitnet_vc_builder/: __init__.py  main.py
src/bitnet_vc_builder/api/: __init__.py  server.py
src/bitnet_vc_builder/config/: __init__.py  config_loader.py
src/bitnet_vc_builder/core/: __init__.py  team.py  virtual_coworker.py
src/bitnet_vc_builder/memory/: __init__.py  memory.py
src/bitnet_vc_builder/tools/: __init__.py  base_tools.py  common_tools.py
tauri-ui/: README.md  package.json
tauri-ui/public/: index.html  manifest.json
tauri-ui/src/: App.js  App.jsx  index.css
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/src/: main.rs
tauri-ui/src/components/: ApiStatus.jsx  AppLayout.jsx  ModelCard.jsx  ModelOptimizer.jsx  TaskCard.jsx  TeamCard.jsx  TeamWorkflow.jsx  ToolCard.jsx  VirtualCoworkerCard.jsx
tauri-ui/src/pages/: Dashboard.jsx  Models.jsx  Settings.jsx  Tasks.jsx  Teams.jsx  Tools.jsx  VirtualCoworkers.jsx
tauri-ui/src/utils/: api.js  settings.js
tests/: test_api_server.py  test_bitnet_model.py  test_config_loader.py  test_integration.py  test_memory.py  test_team.py  test_tool.py  test_virtual_coworker.py
