[package]
name = "bitnet-vc-builder-ui"
version = "0.2.0"
description = "BitNet Virtual Co-worker Builder Desktop Application"
authors = ["BitNet Virtual Co-worker Builder Team"]
license = "MIT"
repository = "https://github.com/bitnet/bitnet-vc-builder"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["dialog-all", "fs-all", "http-all", "shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
